force-app/main/default/objects/Item1__c/Item1__c.object-meta.xml
<CustomObject>
    <label>Item1</label>
    <nameField>
        <label>Item1 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Items1</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>