force-app/main/default/objects/Item1__c/fields/field2__c.field-meta.xml
<CustomField>
    <fullName>field2__c</fullName>
    <label>field2</label>
    <length>23</length>
    <type>Text</type>
</CustomField>