force-app/main/default/objects/Item1__c/fields/field3__c.field-meta.xml
<CustomField>
    <fullName>field3__c</fullName>
    <label>field3</label>
    <length>12</length>
    <type>Text</type>
</CustomField>